--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "load-grunt-tasks": "~0.2.0",
     "grunt-git": "~0.2.2",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1"
-  },
-  "dependencies": {
+    "grunt-contrib-copy": "~0.4.1",
+    "minify": "^4.1.3",
     "ejs-lint": "^0.3.0"
   }
 }
