--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-theme-landscape",
   "version": "0.0.2",
   "private": true,
+  "scripts": {
+    "build":"npx webpack",
+    "commit": "npx git-cz"
+  },
   "devDependencies": {
     "grunt": "~0.4.2",
     "load-grunt-tasks": "~0.2.0",
@@ -9,6 +13,13 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "minify": "^4.1.3",
-    "ejs-lint": "^0.3.0"
+    "ejs-lint": "^0.3.0",
+    "css-loader": "^3.4.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
