--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "mini-css-extract-plugin": "^0.9.0",
     "minify": "^4.1.3",
     "node-sass": "^4.13.1",
+    "purgecss": "^2.1.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-shell-plugin": "^0.5.0"
   },
   "config": {
     "commitizen": {
