--- a/package.json
+++ b/package.json
@@ -3,23 +3,31 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "build":"npx webpack",
+    "build": "npx webpack",
     "commit": "npx git-cz"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
+    "cz-conventional-changelog": "^3.1.0",
+    "ejs-lint": "^0.3.0",
+    "git-cz": "^4.3.1",
     "grunt": "~0.4.2",
-    "load-grunt-tasks": "~0.2.0",
-    "grunt-git": "~0.2.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "minify": "^4.1.3",
-    "ejs-lint": "^0.3.0",
-    "css-loader": "^3.4.2",
+    "grunt-git": "~0.2.2",
+    "load-grunt-tasks": "~0.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "minify": "^4.1.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "dependencies": {}
 }
