--- a/netlify.toml
+++ b/netlify.toml
@@ -2,13 +2,13 @@
 # All deploys from the main repository branch
 # will inherit these settings.
 [context.production]
-    command = 'export PERCY_TOKEN=$percy;rm * -r;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;cd hexo-cheatsheets-demo/themes;rm cheatsheets -r;git submodule add https://github.com/glazec/hexo-cheatsheets.git;mv hexo-cheatsheets cheatsheets;cd ../;npm install;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
+    command = 'export PERCY_TOKEN=$percy;mkdir cheatsheets;mv !(cheatsheets) cheatsheets;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;rm hexo-cheatsheets-demo/themes/cheatsheets -r;mv cheatsheets hexo-cheatsheets-demo/themes/;cd hexo-cheatsheets-demo;npm install;grep themes/cheatsheets/layout/_partial/head.ejs;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
     publish = "hexo-cheatsheets-demo/public"
 
 [context.deploy-preview]
-    command = 'export PERCY_TOKEN=$percy;rm * -r;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;cd hexo-cheatsheets-demo/themes;rm cheatsheets -r;git submodule add https://github.com/glazec/hexo-cheatsheets.git;mv hexo-cheatsheets cheatsheets;cd ../;npm install;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
+    command = 'export PERCY_TOKEN=$percy;mkdir cheatsheets;mv !(cheatsheets) cheatsheets;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;rm hexo-cheatsheets-demo/themes/cheatsheets -r;mv cheatsheets hexo-cheatsheets-demo/themes/;cd hexo-cheatsheets-demo;npm install;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
     publish = "hexo-cheatsheets-demo/public"
 
 [context.branch-deploy]
-    command = 'export PERCY_TOKEN=$percy;rm * -r;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;cd hexo-cheatsheets-demo/themes;rm cheatsheets -r;git submodule add https://github.com/glazec/hexo-cheatsheets.git;mv hexo-cheatsheets cheatsheets;cd ../;npm install;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
+    command = 'export PERCY_TOKEN=$percy;mkdir cheatsheets;mv !(cheatsheets) cheatsheets;git clone https://github.com/glazec/hexo-cheatsheets-demo.git;rm hexo-cheatsheets-demo/themes/cheatsheets -r;mv cheatsheets hexo-cheatsheets-demo/themes/;cd hexo-cheatsheets-demo;npm install;npx hexo generate;npx percy snapshot public/ --ignore-files "public/categories/**,public/archives/**"'
     publish = "hexo-cheatsheets-demo/public"
