--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "build": "npx webpack",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "lint": "npx eslint scripts/filter.js source/js/article.js --fix"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
     "cz-conventional-changelog": "^3.1.0",
     "ejs-lint": "^0.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "git-cz": "^4.3.1",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
