--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx webpack",
     "commit": "npx git-cz",
-    "lint": "npx eslint scripts/filter.js source/js/article.js --fix"
+    "eslint": "npx eslint scripts/filter.js source/js/article.js --fix",
+    "stylelint":"npx stylelint source/sass/**/* --fix"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
@@ -26,6 +27,8 @@
     "purgecss": "^2.1.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.3.2",
+    "stylelint-config-standard": "^20.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-shell-plugin": "^0.5.0"
@@ -35,5 +38,7 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "stylelint-config-sass-guidelines": "^7.0.0"
+  }
 }
