--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npx webpack",
     "commit": "npx git-cz",
     "eslint": "npx eslint scripts/filter.js source/js/article.js --fix",
-    "stylelint":"npx stylelint source/sass/**/* --fix"
+    "stylelint": "npx stylelint source/sass/**/* --fix"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
@@ -28,6 +28,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "stylelint": "^13.3.2",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
