--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 favicon: "/img/favicon.min.webp"
 github: "https://github.com/glazec/hexo-cheatsheets"
 githubToolTip: "Contribute to the theme"
+
+recommend:
+  enable: true
