--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-git": "~0.2.2",
     "load-grunt-tasks": "~0.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^2.5.0",
     "minify": "^4.1.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^7.0.0",
     "purgecss": "^2.1.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.3.1",
     "style-loader": "^1.1.3",
-    "stylelint": "^13.3.2",
+    "stylelint": "^14.11.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.3.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "webpack-shell-plugin-next": "^2.2.2"
   },
   "config": {
     "commitizen": {
@@ -40,6 +41,6 @@
     }
   },
   "dependencies": {
-    "stylelint-config-sass-guidelines": "^7.0.0"
+    
   }
 }
